# Advanced_Tic_Tac_Toe

./: CMakeLists.txt  CMakeLists.txt.user.6280b8f  README.md  main.cpp  mainwindow.ui
.github/workflows/: ci.yml
Src/: main.cpp
Tests/: test_gamelogic.cpp
database/game_logs/: game.cpp
database/player/: player.cpp
includes/: main_includes.h
includes/Utilities/Animation/: animation.h
includes/Utilities/Buttons/: custom_button.h
src/UI/Game_screen/: main.cpp  mainwindow.cpp
src/UI/game_screen/: CellButton.cpp  CellButton.h  mainwindow.h
src/UI/main_screen/: deleteme.txt  main_screen.cpp  main_screen.h
src/Utilities/Animation/: animation.cpp
src/Utilities/Buttons/: Custom_Button.cpp
src/algo/mini_max/: miniMaxAl.cpp
src/algo/one_vs_one/: oneVsOneAl.h
src/ui/game_screen/: CellButton.cpp  CellButton.h  game_screen.cpp  game_screen.h  gamescreen.ui  mainwindow.cpp  mainwindow.h
src/ui/history_screen/: history_screen.cpp  history_screen.h  historyscreen.ui
src/ui/main_screen/: main_screen.cpp  main_screen.h  mainscreen.ui
src/ui/replay_screen/: CellButtonR.cpp  CellButtonR.h  replayscreen.cpp  replayscreen.h
src/ui/sign_screen/: database.cpp  database.h  form.cpp  form.h  sign_screen.cpp  sign_screen.h  signscreen.ui
utilities/: main_includes.h
utilities/Animation/: animation.cpp  animation.h
utilities/Buttons/: Custom_Button.cpp  custom_button.h
